feat(domain): add create few l3domains method
