# domain-service/src/main/java/ru/itmo/domain/controller/UserDomainApiController.java
@@ -1,0 +1,23 @@
+package ru.itmo.domain.controller;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+import ru.itmo.domain.generated.api.UserDomainApi;
+import ru.itmo.domain.service.UserDomainService;
+
+import java.util.List;
+
+@RequiredArgsConstructor
+@RestController
+@org.springframework.web.bind.annotation.RequestMapping("${openapi.openAPIDNS.base-path:/domains}")
+public class UserDomainApiController implements UserDomainApi {
+
+    private final UserDomainService userDomainService;
+
+    @Override
+    public ResponseEntity<List<String>> createUserDomains(List<String> l3Domains) {
+        List<String> createdDomains = userDomainService.createUserDomains(l3Domains);
+        return ResponseEntity.status(201).body(createdDomains);
+    }
+}
