# domain-service/src/main/java/ru/itmo/domain/service/UserDomainService.java
@@ -1,0 +1,8 @@
+package ru.itmo.domain.service;
+
+import java.util.List;
+
+public interface UserDomainService {
+
+    List<String> createUserDomains(List<String> l3Domains);
+}
