# domain-service/src/main/resources/static/openapi.yaml
@@ -320,6 +320,48 @@ paths:
                 type: array
                 items:
                   type: string
+  /userDomains:
+    post:
+      summary: Метод создания доменов пользователя
+      description: Метод предназначен для создания доменов третьего уровня для текущего пользователя. userId берется из JWT токена.
+      operationId: createUserDomains
+      tags:
+        - UserDomain
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: string
+                pattern: ^\s*([a-zA-Z0-9-]+\.){2}[a-zA-Z]{2,}\s*$
+                description: Полное имя домена третьего уровня
+                example: "crazy.example.com"
+              minItems: 1
+              description: Список доменов третьего уровня для создания
+      responses:
+        '201':
+          description: Домены успешно созданы
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                  description: Полное имя созданного домена третьего уровня
+                  example: "crazy.example.com"
+                description: Список успешно созданных доменов
+        '400':
+          description: Некорректные входные данные. Возвращает список атрибутов с ошибками.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
 components:
   parameters:
     Int64Id:
